# svd-leverage-token-compression

./: .gitignore  Makefile  README.md  compressao_tokens.ipynb  compressores.py  constantes.py  dados.py  embeddings.py  experimento.py  extracao_embedding.ipynb  metricas.py  notebook_setup.py  pyproject.toml  requirements.txt  testes.py  trabalho_final.ipynb  visualizacao.py
article/: COMPILACAO.md  README_OVERLEAF.txt  latexmkrc  main.tex  preamble.tex  refs.bib  sbc-template.sty
article/sections/: conclusao.tex  fundamentacao.tex  intro.tex  metodologia.tex  resultados.tex
research/: avaliacao_metricas.ipynb  compressao_tokens.ipynb  experimento.ipynb  extracao_embedding.ipynb  trabalho_final.ipynb
resultados/: .gitkeep
src/: compressores.py  constantes.py  dados.py  embeddings.py  experimento.py  llm_sanidade.py  metricas.py  visualizacao.py
