[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "svd-leverage-token-compression"
version = "0.1.0"
description = "Compressao token-level de embeddings via SVD truncada e leverage scores"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = [
    "compressores",
    "constantes",
    "dados",
    "embeddings",
    "experimento",
    "metricas",
    "visualizacao",
]
